--- a/.ci_support/linux_ppc64le_python3.7.____73_pypy.yaml
+++ b/.ci_support/linux_ppc64le_python3.7.____73_pypy.yaml
@@ -1,11 +1,11 @@
 cdt_name:
 - cos7
 channel_sources:
-- conda-forge,defaults
+- conda-forge
 channel_targets:
 - conda-forge main
 docker_image:
-- condaforge/linux-anvil-cos7-x86_64
+- quay.io/condaforge/linux-anvil-ppc64le
 libxml2:
 - '2.9'
 pin_run_as_build:
@@ -15,9 +15,6 @@ pin_run_as_build:
     min_pin: x.x
     max_pin: x.x
 python:
-- 3.6.* *_cpython
+- 3.7.* *_73_pypy
 target_platform:
-- linux-64
-zip_keys:
-- - cdt_name
-  - docker_image
+- linux-ppc64le
